test/bad/type_declaration_14.mpp
data Type = #CTor | #CTor of int; % illegal redeclaration of constructor
